<resources>
    <string name="app_name">Sotral_Way</string>
    <string name="num_ro_de_ligne">Numéro de Ligne</string>
    <string name="envoyer">Envoyer</string>
    <string name="admin">Admin</string>
    <string name="derick">derick</string>
    <string name="anonyme">Anonyme</string>
    <string name="etudiant">Etudiant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="num_ro_de_carte">Numéro de Carte</string>
    <string name="num_ro_de_t_l_phone">numéro de téléphone</string>
    <array name="lignesUL">
        <item>LIGNE 13</item>
        <item>LIGNE 14</item>
        <item>LIGNE 15</item>
        <item>LIGNE 16</item>
        <item>LIGNE 17</item>
        <item>LIGNE 18</item>
        <item>LIGNE 19</item>
    </array>
    <array name="lignesAutres">
        <item>LIGNE 1</item>
        <item>LIGNE 2</item>
        <item>LIGNE 3</item>
        <item>LIGNE 4</item>
        <item>LIGNE 5</item>
        <item>LIGNE 6</item>
        <item>LIGNE 7</item>
        <item>LIGNE 8</item>
        <item>LIGNE 9</item>
        <item>LIGNE 10</item>
        <item>LIGNE 11</item>
        <item>LIGNE 12</item>
    </array>
    <string name="title_activity_select_admin">SelectAdmin</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="str_etudiants">Etudiants</string>
    <string name="str_a_propos_de_sotral">A Propos de Sotral</string>
    <string name="str_administration">Administration</string>
    <string name="str_anonyme">Anonymes</string>
    <string name="str_autres">Anonymes</string>
    <string name="cpmail">promotion2016@cp16.cic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_admin_tab">AdminTabActivity</string>
    <string name="labelMain">FristActivity</string>
    <string name="str_exit">Exit</string>
    <string name="str_connexion">Connexion</string>
    <string name="info_horaires">Info Horaires</string>
    <string name="info_payement">Info payement</string>
    <string name="str_a_propos_de_cp16">A propos de CP16</string>
    <string name="str_se_connecter">Se Connecter</string>
    <string name="str_s_identifier">S\'Identifier</string>
    <string name="str_creer_un_nouveau_compte">Creer un nouveau compte</string>
    <string name="str_s_inscrire">S\'Inscrire</string>
    <string name="str_creationConpte">Creer un compte</string>
    <string name="str_nom">Nom</string>
    <string name="str_mot_de_passe">Mot De Passe</string>
    <string name="str_r_p_ter_le_mot_de_passe">Répéter Le Mot De Passe</string>
    <string name="str_mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="vous_n_avez_pas_encore_de_compte">Vous n\'avez pas encore de compte?</string>
    <string name="vous_avez_d_j_un_compte">Vous avez déjà un compte ?</string>
    <string name="chauffeur">CHAUFFEUR</string>
    <string name="strPrenom">Prénom</string>
    <string name="strnumcarte">Numéro de Carte</string>
    <string name="str_numero">Numéro De Téléphone</string>
</resources>
