<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackLogin"
    tools:context="myactivity.cp16.com.sotral_way.Views.Admin.AdminAuthentification">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/dim_wid_frag_icon"
        android:layout_height="@dimen/dim_heig_frag_icon"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="2dp"
        android:padding="10dp"
        android:src="@drawable/ic_admin_white_24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/chauffeur"
        android:textColor="@color/colorAccent4"
        android:textSize="@dimen/dim_icon_legen" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent4"
            android:outlineAmbientShadowColor="@color/colorAccent4"
            android:theme="@style/InputColor1"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/idEditAdmLineNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/num_ro_de_ligne"
                android:inputType="number"
                android:maxLines="1"
                android:focusableInTouchMode="true"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_numligne_white_24dp"
                android:drawablePadding="12dp"
                android:textColor="@color/colorAccent4"
                android:outlineAmbientShadowColor="@color/colorAccent4"/>

        </android.support.design.widget.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#edf1c9" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent4"
            android:outlineAmbientShadowColor="@color/colorAccent4"
            android:theme="@style/InputColor1"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/idEditAdmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:maxLines="1"
                android:focusableInTouchMode="true"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="12dp"
                android:textColor="@color/colorAccent4"
                android:outlineAmbientShadowColor="@color/colorAccent4"/>

        </android.support.design.widget.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#edf1c9" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/n5_bnt_height"
            android:id="@+id/idBtnLoginAdm"
            android:layout_gravity="center"
            android:background="@drawable/backgroud_bnt_login"
            android:clickable="true"
            android:text="@string/str_se_connecter"
            android:textColor="#fff"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vous_n_avez_pas_encore_de_compte"
                android:textColor="@color/colorAccent4"
                android:layout_marginTop="4dp"
                android:textSize="13dp"/>
            <TextView
                android:id="@+id/btnGotoRecordAdmin"
                android:layout_width="@dimen/dim_goto_width"
                android:layout_height="wrap_content"
                android:text="S'inscrire"
                android:maxLines="1"
                android:textColor="@color/colorAccent1"
                android:layout_marginTop="4dp"
                android:paddingHorizontal="2dp"
                android:clickable="true"
                android:textSize="15dp"/>


        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:clickable="true"
            android:textSize="15dp"
            android:text="@string/str_mot_de_passe_oubli"
            android:textColor="@color/colorAccent2"/>

    </LinearLayout>

    </ScrollView>

</FrameLayout>
