<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingHorizontal="5dp"
    tools:context="myactivity.cp16.com.sotral_way.Views.Etudiant.EtudiantAuthentification">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dim_wid_frag_icon"
                android:layout_height="@dimen/dim_heig_frag_icon"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="2dp"
                android:padding="10dp"
                android:src="@drawable/ic_school_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/etudiant"
                android:textColor="@color/colorAccent4"
                android:textSize="@dimen/dim_icon_legen" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent4"
                android:outlineAmbientShadowColor="@color/colorAccent4"
                android:theme="@style/InputColor1"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idCartNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:layout_marginTop="40dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="12dp"
                    android:hint="@string/num_ro_de_carte"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/colorAccent4"
                    android:outlineAmbientShadowColor="@color/colorAccent4"
                    />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#edf1c9" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idPasswordEtd"
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/mot_de_passe"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#ffffff" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#edf1c9" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="6dp"
                android:text="Souvenir de moi"
                android:textColor="#fff" />

            <Button
                android:id="@+id/idBtnLoginEtd"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/n5_bnt_height"
                android:layout_gravity="center"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/backgroud_bnt_login"
                android:clickable="true"
                android:text="@string/str_se_connecter"
                android:textColor="#fff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/btnRecordEtudiant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_creer_un_nouveau_compte"
                    android:textColor="@color/colorAccent4"
                    android:layout_marginTop="4dp"
                    android:clickable="true"
                    android:textSize="15dp"/>

                <!--android.support.design.widget.FloatingActionButton
                    android:id="@+id/btnRecordEtudiant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"


                    android:src="@android:drawable/ic_input_add" /-->
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:clickable="true"
                android:textSize="15dp"
                android:text="@string/str_mot_de_passe_oubli"
                android:textColor="@color/colorAccent2"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>