<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackLogin"
    android:orientation="vertical"
    tools:context="myactivity.cp16.com.sotral_way.Views.Etudiant.EtudiantRecord">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dim_wid_frag_icon"
                android:layout_height="@dimen/dim_heig_frag_icon"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="2dp"
                android:padding="10dp"
                android:src="@drawable/ic_school_black_24dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/etudiant"
                android:textColor="@color/colorAccent4"
                android:textSize="@dimen/dim_icon_legen" />



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent4"
                android:outlineAmbientShadowColor="@color/colorAccent4"
                android:theme="@style/InputColor1"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idEditEtuName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:layout_marginTop="40dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/str_nom"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@color/regist_texcolor"
                    android:outlineAmbientShadowColor="@color/colorAccent4"/>

            </android.support.design.widget.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ColorformLine" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent4"
                android:outlineAmbientShadowColor="@color/colorAccent4"
                android:theme="@style/InputColor1"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idEditEtulastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/strPrenom"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/regist_texcolor"
                    android:focusableInTouchMode="true"
                    android:background="@android:color/transparent"
                    android:outlineAmbientShadowColor="@color/colorAccent4"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/ColorformLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent4"
                android:outlineAmbientShadowColor="@color/colorAccent4"
                android:theme="@style/InputColor1"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idEditEtuRgterNumCarte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/strnumcarte"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/regist_texcolor"
                    android:outlineAmbientShadowColor="@color/colorAccent4"
                    android:focusableInTouchMode="true"
                    android:background="@android:color/transparent" />
            </android.support.design.widget.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ColorformLine" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent4"
                android:outlineAmbientShadowColor="@color/colorAccent4"
                android:theme="@style/InputColor1"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idEditEtuEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/regist_texcolor"
                    android:outlineAmbientShadowColor="@color/colorAccent4"
                    android:focusableInTouchMode="true"
                    android:background="@android:color/transparent" />
            </android.support.design.widget.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ColorformLine" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent4"
                android:outlineAmbientShadowColor="@color/colorAccent4"
                android:theme="@style/InputColor1"
                android:layout_marginTop="10dp"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idEditRgterEtuPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/str_mot_de_passe"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/regist_texcolor"
                    android:focusableInTouchMode="true"
                    android:background="@android:color/transparent"
                    android:outlineAmbientShadowColor="@color/colorAccent4"/>
            </android.support.design.widget.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ColorformLine" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent4"
                android:outlineAmbientShadowColor="@color/colorAccent4"
                android:theme="@style/InputColor1"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idEditEtuRepass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/str_r_p_ter_le_mot_de_passe"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/regist_texcolor"
                    android:focusableInTouchMode="true"
                    android:background="@android:color/transparent"
                    android:outlineAmbientShadowColor="@color/colorAccent4"/>
            </android.support.design.widget.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/ColorformLine" />

        </LinearLayout>




    </ScrollView>


    <ProgressBar
        android:id="@+id/idpBarEtuRegister"
        android:layout_gravity = "center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    <Button
        android:id="@+id/idBtnEtuRegister"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/n5_bnt_height"
        android:layout_gravity="center"
        android:background="@drawable/backgroud_bnt_register"
        android:paddingHorizontal="5dp"
        android:paddingVertical="2dp"
        android:layout_marginVertical="10dp"
        android:textSize="15dp"
        android:text="@string/str_s_inscrire"
        android:textColor="#d413ad" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vous_avez_d_j_un_compte"
            android:textColor="@color/colorAccent4"
            android:textSize="13dp"/>
        <TextView
            android:id="@+id/idTextGoToAuthEtudiant"
            android:layout_width="@dimen/dim_goto_width"
            android:layout_height="wrap_content"
            android:text="S'identifier"
            android:textColor="@color/colorAccent1"
            android:clickable="true"
            android:maxLines="1"
            android:textSize="15dp"/>


    </LinearLayout>

</LinearLayout>